--- a/banana_config.json
+++ b/banana_config.json
@@ -1,11 +1,10 @@
 {
-    "name": "Stable diffusion image variation model",
-    "category": "stable-diffusion",
-    "example_input": {
-        "image": "base64 image goes here"
+    "name": "Stable Diffusion 2.1",
+    "category": "Computer Vision",
+    "example_input": {"base64_input": "data:image/jpg;base64,iVBORw0KGgoAAAANSUhEUgAACSgAAASwCAYA...",
+        "height":512,
+        "width":512
     },
-    "example_output": {
-        "output": "base64 image"
-    },
-    "version": "1"
+    "example_output": {"base64_output": "data:image/jpg;base64,iVBORw0KGgoAAAANSUhEUgAACSgAAASwCAYA..."},
+    "version": "1.1"
 }
