--- a/banana_config.json
+++ b/banana_config.json
@@ -1,10 +1,19 @@
 {
-    "name": "Stable Diffusion 2.1",
+    "name": "Stable Diffusion 2.0",
     "category": "Computer Vision",
-    "example_input": {"base64_input": "data:image/jpg;base64,iVBORw0KGgoAAAANSUhEUgAACSgAAASwCAYA...",
-        "height":512,
-        "width":512
+    "example_input": {
+        "base64_input": "base64_image_string",
+        "output_images_number": 4,
+        "guidance_scale": 3,
+        "steps": 15,
+        "seed": 0
     },
-    "example_output": {"base64_output": "data:image/jpg;base64,iVBORw0KGgoAAAANSUhEUgAACSgAAASwCAYA..."},
-    "version": "1.1"
+    "example_output": {
+        "base64_images": [
+            "base64_image_string_1",
+            "base64_image_string_2 ...",
+            "base64_image_string_n"
+            ]
+        },
+    "version": "2"
 }
